# email-review-env

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  test_local.py
server/: Dockerfile  app.py  environment.py  requirements.txt
