[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email_review_env"
version = "1.0.0"
description = "Customer support email triage environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "websockets>=11.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]
